--- a/cms-parent/pom.xml
+++ b/cms-parent/pom.xml
@@ -77,6 +77,13 @@
 				<version>1.7.4</version>
 			</dependency>
 
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib</artifactId>
+				<version>3.0</version>
+			</dependency>
+
+
 
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -116,8 +123,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 		</plugins>
