--- a/cms-parent/pom.xml
+++ b/cms-parent/pom.xml
@@ -9,12 +9,35 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>3.2.2.RELEASE</spring.version>
 	</properties>
+	<modules>
+		<module>../cms-core</module>
+		<module>../cms-user</module>
+		<module>../hibernate-basic</module>
+	</modules>
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>com.scp.basic</groupId>
+				<artifactId>basic-hibernate</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>com.scp.cms</groupId>
+				<artifactId>cms-core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
 				<version>4.2.0.Final</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>4.3.1.Final</version>
 			</dependency>
 
 			<dependency>
@@ -83,6 +106,24 @@
 				<version>3.0</version>
 			</dependency>
 
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>1.0.0.GA</version>
+			</dependency>
+
+
+			<dependency>
+				<groupId>org.wicketstuff</groupId>
+				<artifactId>jsr303</artifactId>
+				<version>1.5-RC5.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>5.0.1.Final</version>
+			</dependency>
 
 
 			<dependency>
